--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /mod07_2016_prg_451_Ch1/nbproject/private/
 /mod07_2016_prg_451_Ch1/build/
 /mod07_2016_prg_451_Ch1/dist/
+/JDevApp/nbproject/private/
+/JDevApp/build/
